--- a/BibleReader/build.properties
+++ b/BibleReader/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                css/default.css,\
-               build.properties
+               build.properties,\
+               resources/mysql-connector-java-5.1.6.jar
 source.. = src/
