--- a/BibleReader/pom.xml
+++ b/BibleReader/pom.xml
@@ -16,6 +16,11 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>3.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-maven-plugin</artifactId>
+			<version>3.4.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -31,6 +36,7 @@
 			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>3.4.1</version>
 				<configuration>
 					<changeLogFile>C:\Users\lkutvolg\myworkspace\BibleReader\resources\db.changelog.xml</changeLogFile>
 					<driver>com.mysql.jdbc.Driver</driver>
