--- a/BibleReader/pom.xml
+++ b/BibleReader/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.liquibase</groupId>
-			<artifactId>liquibase-core</artifactId>
+			<artifactId>liquibase-maven-plugin</artifactId>
 			<version>3.4.1</version>
 		</dependency>
 	</dependencies>
