--- a/Bible/pom.xml
+++ b/Bible/pom.xml
@@ -82,7 +82,7 @@
 				<configuration>
 					<changeLogFile>C:\Users\lkutvolg\myworkspace\BibleReader\resources\db.changelog.xml</changeLogFile>
 					<driver>com.mysql.jdbc.Driver</driver>
-					<url>jdbc:mysql://localhost:3306/Bible</url>
+					<url>jdbc:mysql://localhost:3306/Bible?useUnicode=true&amp;characterEncoding=UTF-8</url>
 					<username>root</username>
 					<password></password>
 				</configuration>
