--- a/Bible/pom.xml
+++ b/Bible/pom.xml
@@ -80,7 +80,7 @@
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<version>3.4.1</version>
 				<configuration>
-					<changeLogFile>C:\Users\lkutvolg\myworkspace\BibleReader\resources\db.changelog.xml</changeLogFile>
+					<changeLogFile>..\BibleReader\resources\db.changelog.xml</changeLogFile>
 					<driver>com.mysql.jdbc.Driver</driver>
 					<url>jdbc:mysql://localhost:3306/Bible?useUnicode=true&amp;characterEncoding=UTF-8</url>
 					<username>root</username>
