--- a/BibleReader/build.properties
+++ b/BibleReader/build.properties
@@ -5,5 +5,6 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                css/default.css,\
                build.properties,\
-               lib/mysql-connector-java-5.1.6.jar
+               lib/mysql-connector-java-5.1.6.jar,\
+               lib/junit-4.11.jar
 source.. = src/
