--- a/Bible/build.properties
+++ b/Bible/build.properties
@@ -5,3 +5,4 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                css/default.css
 source.. = src/
+jre.compilation.profile = JavaSE-1.7
