--- a/Bible/pom.xml
+++ b/Bible/pom.xml
@@ -7,6 +7,7 @@
 	<name>Bible</name>
 	<modules>
 		<module>../BibleReader</module>
+		<module>../BibleLogger</module>
 	</modules>
 	<properties>
 		<tycho.version>0.23.0</tycho.version>
