--- a/BibleReader/build.properties
+++ b/BibleReader/build.properties
@@ -1,10 +1,26 @@
-output.. = bin/
-bin.includes = META-INF/,\
-               .,\
+bin.includes = .,\
                plugin.xml,\
                Application.e4xmi,\
                css/default.css,\
                build.properties,\
-               lib/mysql-connector-java-5.1.6.jar,\
-               lib/junit-4.11.jar
-source.. = src/
+               runLiquibase.bat,\
+               reader.product,\
+               pom.xml,\
+               resources/,\
+               src/,\
+               .classpath,\
+               .project,\
+               .settings/,\
+               META-INF/,\
+               lib/,\
+               target/
+source.. = src/,\
+           test/
+src.includes = lib/,\
+               Application.e4xmi,\
+               css/,\
+               pom.xml,\
+               reader.product,\
+               resources/,\
+               runLiquibase.bat,\
+               target/
