logging fix temporary

--- a/BibleLogger/build.properties
+++ b/BibleLogger/build.properties
@@ -1,7 +1,8 @@
 source.. = src/
-output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               BibleLogger.jar
-src.includes = BibleLogger.jar
+               BibleLogger.jar,\
+               target/classes/
+src.includes = BibleLogger.jar,\
+               target/classes/
