--- a/BibleReader/.classpath
+++ b/BibleReader/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="lib/powermock-api-mockito-1.6.4.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-nodep-3.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-all-1.9.1-20110911.jar"/>
+	<classpathentry kind="lib" path="/BibleLogger/BibleLogger.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
