logging does not work

--- a/BibleLogger/build.properties
+++ b/BibleLogger/build.properties
@@ -1,8 +1,8 @@
 source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               BibleLogger.jar,\
-               target/classes/
-src.includes = BibleLogger.jar,\
-               target/classes/
+               icons/,\
+               css/default.css,\
+               Application.e4xmi
