--- a/BibleReader/.classpath
+++ b/BibleReader/.classpath
@@ -12,11 +12,15 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-mockito.jar"/>
-	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-api-mockito-1.6.4.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-nodep-3.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-all-1.9.1-20110911.jar"/>
+	<classpathentry kind="var" path="ASPECTJRT_LIB"/>
+	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-validator-5.2.4.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-validator-annotation-processor-5.2.4.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-validator-cdi-5.2.4.Final.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
