--- a/BibleReader/.classpath
+++ b/BibleReader/.classpath
@@ -9,7 +9,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.6.jar"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-mockito.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
@@ -19,5 +18,6 @@
 	<classpathentry kind="lib" path="lib/mockito-all-1.9.1-20110911.jar"/>
 	<classpathentry kind="var" path="ASPECTJRT_LIB"/>
 	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
