build.properties changed

--- a/BibleLogger/build.properties
+++ b/BibleLogger/build.properties
@@ -3,5 +3,15 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               Application.e4xmi
+               Application.e4xmi,\
+               BibleLogger.jar,\
+               target/,\
+               src/,\
+               pom.xml,\
+               build.properties,\
+               bin/,\
+               BibleLogger.product,\
+               .settings/,\
+               .project,\
+               .classpath
 
