--- a/BibleReader/build.properties
+++ b/BibleReader/build.properties
@@ -13,7 +13,8 @@ bin.includes = .,\
                .settings/,\
                META-INF/,\
                lib/,\
-               target/
+               target/,\
+               runLiquibase.sh
 source.. = src/,\
            test/
 src.includes = lib/,\
