--- a/BibleReader/pom.xml
+++ b/BibleReader/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath>../Bible</relativePath>
 	</parent>
 	<artifactId>reader</artifactId>
-	<packaging>eclipse-repository</packaging>
+	<packaging>eclipse-application</packaging>
 	<name>BibleReader</name>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
