product can be run

--- a/Bible/BibleReader/build.properties
+++ b/Bible/BibleReader/build.properties
@@ -4,7 +4,6 @@ bin.includes = .,\
                css/default.css,\
                build.properties,\
                runLiquibase.bat,\
-               reader.product,\
                pom.xml,\
                resources/,\
                .classpath,\
@@ -14,9 +13,9 @@ bin.includes = .,\
                lib/,\
                target/,\
                runLiquibase.sh,\
-               lib/mysql-connector-java-5.1.6.jar
-source.. = src/,\
-           test/
+               lib/mysql-connector-java-5.1.6.jar,\
+               reader.product,\
+               plugin_customization.ini
 src.includes = lib/,\
                Application.e4xmi,\
                css/,\
@@ -25,3 +24,5 @@ src.includes = lib/,\
                resources/,\
                runLiquibase.bat,\
                target/
+source.. = src/,\
+           test/
