--- a/Bible/BibleReader/plugin.xml
+++ b/Bible/BibleReader/plugin.xml
@@ -10,6 +10,18 @@
                name="appName"
                value="reader">
          </property>
+         <property
+               name="startupMessageRect"
+               value="7,252,445,20">
+         </property>
+         <property
+               name="startupProgressRect"
+               value="5,275,445,15">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
+         </property>
       </product>
    </extension>
 </plugin>
