--- a/Bible/BibleReader/pom.xml
+++ b/Bible/BibleReader/pom.xml
@@ -22,6 +22,14 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>${tycho.groupId}</groupId>
+				<artifactId>tycho-p2-publisher-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<publishArtifacts>true</publishArtifacts>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-director-plugin</artifactId>
 				<version>0.23.0</version>
@@ -34,6 +42,13 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<products>
+						<product>
+							<id>reader.product</id>
+						</product>
+					</products>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
