history part created

--- a/Bible/BibleReader/bundle.properties
+++ b/Bible/BibleReader/bundle.properties
@@ -1,9 +1,13 @@
-translations=Translations
 next.chapter=Next chapter
 previous.chapter=Previous chapter
 previous.book=Previous book
 next.book=Next book
+
+translations=Translations
 hungarian=Hungarian
 english=English
-karoly=Karoly
+
+history=History
+
+karoly=Károly
 NIV=NIV
