new parts created

--- a/Bible/BibleReader/bundle.properties
+++ b/Bible/BibleReader/bundle.properties
@@ -10,5 +10,13 @@ english=English
 history=History
 clear=Clear
 
+map=Map
+
+bookmark=Bookmark
+
+search=Search
+
+statistics=Statistics
+
 karoly=Károly
 NIV=NIV
