--- a/Bible/BibleReader/bundle.properties
+++ b/Bible/BibleReader/bundle.properties
@@ -7,16 +7,15 @@ translations=Translations
 hungarian=Hungarian
 english=English
 
-history=History
 clear=Clear
 
+history=History
 map=Map
-
 bookmark=Bookmark
-
 search=Search
-
 statistics=Statistics
+notes=Notes
+books=Books
 
 karoly=Károly
 NIV=NIV
