change to postgresql

--- a/Bible/BibleProduct/build.properties
+++ b/Bible/BibleProduct/build.properties
@@ -1,4 +1,8 @@
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               product.product
+               product.product,\
+               BibleLogger/,\
+               BibleProduct/,\
+               BibleReader/,\
+               Log4jProperties/
