--- a/Bible/BibleReader/build.properties
+++ b/Bible/BibleReader/build.properties
@@ -9,6 +9,8 @@ bin.includes = .,\
                META-INF/,\
                bundle.properties,\
                bundle_en.properties,\
-               bundle_hu.properties
+               bundle_hu.properties,\
+               lib/jdbc-postgresql.jar
 source.. = src/,\
            test/
+bin.excludes = lib/mysql-connector-java-5.1.6.jar
