--- a/Bible/build.properties
+++ b/Bible/build.properties
@@ -3,5 +3,9 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                css/default.css,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               BibleLogger/,\
+               BibleProduct/,\
+               BibleReader/,\
+               Log4jProperties/
 jre.compilation.profile = JavaSE-1.7
