--- a/Bible/BibleReader/.classpath
+++ b/Bible/BibleReader/.classpath
@@ -2,10 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/"/>
-	<classpathentry kind="src" path="test/"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/cglib-nodep-3.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
@@ -13,5 +12,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/objenesis-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/powermock-api-mockito-1.6.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/powermock-mockito.jar"/>
+	<classpathentry kind="lib" path="lib/jdbc-postgresql.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
