--- a/Bible/BibleReader/src/com/lory/biblereader/model/dao/db_connection.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/model/dao/db_connection.properties
@@ -1,3 +1,3 @@
-url=jdbc:mysql://localhost:3306/Bible
-username=root
-password=root
+url=jdbc:postgresql://localhost:5432/bible
+username=postgres
+password=postgres
