--- a/Bible/BibleProduct/build.properties
+++ b/Bible/BibleProduct/build.properties
@@ -1,8 +1,4 @@
-bin.includes = plugin.xml,\
-               META-INF/,\
-               .,\
+bin.includes = .,\
                product.product,\
-               BibleLogger/,\
-               BibleProduct/,\
-               BibleReader/,\
-               Log4jProperties/
+               META-INF/,\
+               plugin.xml
