--- a/Bible/.classpath
+++ b/Bible/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="lib/liquibase.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/reader"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
