--- a/Bible/BibleReader/.classpath
+++ b/Bible/BibleReader/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdbc-postgresql.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/cglib-nodep-3.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
@@ -12,6 +13,5 @@
 	<classpathentry exported="true" kind="lib" path="lib/objenesis-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/powermock-api-mockito-1.6.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/powermock-mockito.jar"/>
-	<classpathentry kind="lib" path="lib/jdbc-postgresql.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
