--- a/Bible/BibleReader/src/com/lory/biblereader/model/dao/db_connection.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/model/dao/db_connection.properties
@@ -1,3 +1,4 @@
-url=jdbc:postgresql://localhost:5432/bible
+driver=org.postgresql.Driver
+url=jdbc:postgresql://localhost:5433/bible
 username=postgres
 password=postgres
