--- a/Bible/db.properties
+++ b/Bible/db.properties
@@ -1,6 +1,6 @@
 driver=org.postgresql.Driver
 changeLogFile=./src/main/resources/db.changelog.xml
 #classpath=../lib/jdbc-postgresql.jar
-url=jdbc:postgresql://localhost:5433/bible
+url=jdbc:postgresql://localhost:5432/bible
 username=postgres
-password=postgres
+password=pass
